iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_defs_deep_nesting.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
output: deep-value
