iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_defs_dynamic_scoping.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
output:
  - item-1
  - item-2
  - item-3
