iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_defs_mixed_references.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
output: value-is-1234
