iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_defs_nested_dynamic_scopes.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
outer:
  - outer-middle-1
  - outer-middle-2
