iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_defs_using_handlebars_or_vars.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
output:
  handlebars_a: a-is-1234
  direct_a: 1234
  c: 1234
  a_plus_b: a-is-1234-and-b-is-999
