iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_join_example.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
title: Join Operation Demo
stack_name: my-app-production
comma_separated: "apple, banana, cherry"
path_like: usr/local/bin
no_delimiter: prefixmy-appsuffix
version_string: 1.2.3
