iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_let.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
AWSTemplateFormatVersion: 2010-09-09
Description: Example of !$let tag for local variable binding
Parameters:
  LoadBalancerPort: true
  DatabaseConfig:
    Host: production-db-cluster
    Port: 5432
    MaxConnections: 100
    ConnectionPoolSize: 20
    DatabaseName: production_app_db
Resources:
  WebServerGroup:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      MinSize: 3
      MaxSize: true
      DesiredCapacity: 3
  ServiceConfiguration:
    Type: "AWS::SSM::Parameter"
    Properties:
      Name: /app/config/service
      Type: String
      Value: "{\"service\":{\"healthCheck\":{\"enabled\":true,\"path\":\"/health\",\"retries\":3,\"timeout\":30},\"logging\":{\"level\":\"INFO\"},\"name\":\"myapp-production\",\"port\":8080}}"
Outputs:
  ServiceEndpoint:
    Description: Service endpoint URL
    Value: "https://production-service.example.com:8080"
  ConfigSummary:
    Description: Configuration summary
    Value: "Environment: production Instances: 3 Port: 8080"
